MPP-2920 - Mask Card UI Fixes (#3179)
* truncate long email addresses

* update media query syntax

--- a/frontend/src/components/dashboard/aliases/MaskCard.module.scss
+++ b/frontend/src/components/dashboard/aliases/MaskCard.module.scss
@@ -16,7 +16,7 @@
 
 .bar {
   display: flex;
-  align-items: stretch;
+  align-items: center;
   gap: $spacing-sm;
   padding: $spacing-sm;
 
@@ -27,8 +27,12 @@
     min-width: 0;
     display: flex;
     align-items: center;
-    gap: $spacing-sm;
     flex-wrap: wrap;
+
+    @media screen and #{$mq-md} {
+      gap: $spacing-sm;
+      flex-wrap: nowrap;
+    }
 
     .label-editor-wrapper {
       @media screen and #{$mq-md} {
@@ -40,8 +44,9 @@
 
     .copy-button-wrapper {
       display: flex;
-      align-items: stretch;
+      align-items: center;
       gap: $spacing-sm;
+      overflow: hidden;
     }
 
     .copy-button {
@@ -62,6 +67,25 @@
 
       samp {
         font-family: inherit;
+        max-width: 250px; // Setting a fixed width to truncate string
+        align-self: start;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        @media screen and #{$mq-sm} {
+          max-width: 350px;
+        }
+        @media screen and #{$mq-md} {
+          max-width: 400px;
+        }
+        @media screen and #{$mq-lg} {
+          max-width: none;
+        }
+      }
+
+      .copy-icon {
+        width: 15px; // Fixed size for the copy icon
       }
     }
 
@@ -152,7 +176,7 @@
     transition: padding 200ms ease-in-out;
 
     .stats {
-      @media screen and not #{$mq-md} {
+      @media screen and (max-width: $screen-md) {
         display: flex;
         flex-direction: column;
         padding-inline: $spacing-md;
@@ -239,7 +263,7 @@
     }
   }
 
-  @media screen and not #{$mq-md} {
+  @media screen and (max-width: $screen-md) {
     display: flex;
     flex-direction: column;
     gap: $spacing-md;
@@ -374,7 +398,7 @@
 }
 
 .meta {
-  @media screen and not #{$mq-md} {
+  @media screen and (max-width: $screen-md) {
     display: flex;
     flex-direction: column;
 
